force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Channel is a conditional mandatory field dependent on Type field.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCRM</fullName>
            </value>
            <value>
                <fullName>MLCRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>