force-app/main/default/objects/Campaign/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Campaign Code i.e BP17404</description>
    <externalId>true</externalId>
    <label>Campaign Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>