force-app/main/default/objects/Campaign/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>UNICA is currently not sending any value in &quot;Description&quot; field hence this will be used in future.</description>
    <label>Brief Description</label>
    <type>TextArea</type>
</CustomField>