force-app/main/default/objects/Campaign/fields/Is_Routable__c.field-meta.xml
<CustomField>
    <fullName>Is_Routable__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To indicate if the campaign supports inbound routing.</description>
    <label>RoutableFlag</label>
    <type>Checkbox</type>
</CustomField>