force-app/main/default/objects/Campaign/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Only ANZ Commercial bank is applicable for CCRM. Mulesoft will filter the other campaigns.</description>
    <label>Organization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANZ Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Default Organization - Retail</fullName>
            </value>
            <value>
                <fullName>ANZ Private Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>