force-app/main/default/objects/Campaign/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This priority applies to all the leads associated with this campaign.</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>