force-app/main/default/objects/Campaign/validationRules/CCRM_StandardField_MandatoryCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_StandardField_MandatoryCheck</fullName>
    <active>true</active>
    <description>Custom validation to make standard fields (Name, Type, StartDate, EndDate) mandatory</description>
    <errorConditionFormula>$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false &amp;&amp; (ISBLANK(TEXT(Type)) || ISBLANK(StartDate) || ISBLANK(EndDate))</errorConditionFormula>
    <errorMessage>Required fields are missing: [Type, StartDate, EndDate]</errorMessage>
</ValidationRule>